--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
                                     <div class="navbar-translate">
                                         <a class="navbar-brand" href="#pablo">
                                               <i class="now-ui-icons education_glasses"></i>
-                                               GEEKTEQ
+                                               GEEKTEQ-changed
                                           </a>
                                         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#example-navbar-primary" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                             <span class="navbar-toggler-bar bar1"></span>
