--- a/views/index.html
+++ b/views/index.html
@@ -25,13 +25,13 @@
                                     <div class="navbar-translate">
                                         <a class="navbar-brand" href="#pablo">
                                               <i class="now-ui-icons education_glasses"></i>
-                                               GEEKTEQ-changed
+                                               GEEKTEQ
                                           </a>
-                                        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#example-navbar-primary" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                     <!--   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#example-navbar-info" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                             <span class="navbar-toggler-bar bar1"></span>
                                             <span class="navbar-toggler-bar bar2"></span>
                                             <span class="navbar-toggler-bar bar3"></span>
-                                        </button>
+                                        </button> -->
                                     </div>
                                     <div class="collapse navbar-collapse justify-content-center" id="example-navbar-primary">
                                         <ul class="navbar-nav">
@@ -64,7 +64,7 @@
                                     <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
                                         <ul class="navbar-nav">
                                             <li class="nav-item">
-                                                <a class="dropdown" href="G:/GEEKTEQ_PROJECT/now-ui-kit-v1.1.0/examples/login-page.html">Login/Signup</a>
+                                                <a class="dropdown" href="login.html">Login/Signup</a>
                                             </li>
                                         </ul>
                                     </div>
