--- a/views/index.html
+++ b/views/index.html
@@ -27,11 +27,12 @@
                                               <i class="now-ui-icons education_glasses"></i>
                                                GEEKTEQ
                                           </a>
-                                     <!--   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#example-navbar-info" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#example-navbar-info" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                             <span class="navbar-toggler-bar bar1"></span>
                                             <span class="navbar-toggler-bar bar2"></span>
                                             <span class="navbar-toggler-bar bar3"></span>
-                                        </button> -->
+											<span class="navbar-toggler-bar bar4"></span>
+                                        </button> 
                                     </div>
                                     <div class="collapse navbar-collapse justify-content-center" id="example-navbar-primary">
                                         <ul class="navbar-nav">
