--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
                             <nav class="navbar navbar-expand-lg bg-info">
                                 <div class="container">
                                     <div class="navbar-translate">
-                                        <a class="navbar-brand" href="#pablo">
+                                        <a class="navbar-brand" href="index.html">
                                               <i class="now-ui-icons education_glasses"></i>
                                                GEEKTEQ
                                           </a>
@@ -32,7 +32,7 @@
                                             <span class="navbar-toggler-bar bar2"></span>
                                             <span class="navbar-toggler-bar bar3"></span>
 											<span class="navbar-toggler-bar bar4"></span>
-                                        </button> 
+                                        </button> 										
                                     </div>
                                     <div class="collapse navbar-collapse justify-content-center" id="example-navbar-primary">
                                         <ul class="navbar-nav">
