--- a/views/register.html
+++ b/views/register.html
@@ -51,9 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href=" ">Have an issue?</a>
-                    </li>
+                    </li> -->
                   </ul>
             </div>
         </div>
