--- a/views/index.html
+++ b/views/index.html
@@ -2,79 +2,197 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="../assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>GEEKTEQ</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="../assets/css/demo.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>GEEKTEQ</title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <!--     Fonts and icons     -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+  <!-- CSS Files -->
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
+  <!-- CSS Just for demo purpose, don't include it in your project -->
+  <link href="../assets/css/demo.css" rel="stylesheet" />
+  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+  <style>
+    pre.prettyprint {
+      background-color: #eee;
+      border: 0px;
+      margin-bottom: 60px;
+      margin-top: 30px;
+      padding: 20px;
+      text-align: left;
+    }
+
+    .atv,
+    .str {
+      color: #05AE0E;
+    }
+
+    .tag,
+    .pln,
+    .kwd {
+      color: #3472F7;
+    }
+
+    .atn {
+      color: #2C93FF;
+    }
+
+    .pln {
+      color: #333;
+    }
+
+    .com {
+      color: #999;
+    }
+
+    .space-top {
+      margin-top: 50px;
+    }
+
+    .btn-primary .caret {
+      border-top-color: #3472F7;
+      color: #3472F7;
+    }
+
+    .area-line {
+      border: 1px solid #999;
+      border-left: 0;
+      border-right: 0;
+      color: #666;
+      display: block;
+      margin-top: 20px;
+      padding: 8px 0;
+      text-align: center;
+    }
+
+    .area-line a {
+      color: #666;
+    }
+
+    .container-fluid {
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .table-shopping .td-name {
+      min-width: 130px;
+    }
+
+    .pick-class-label {
+      border-radius: 8px;
+      border: 1px solid #E3E3E3;
+      color: #ffffff;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 75%;
+      font-weight: bold;
+      line-height: 1;
+      margin-right: 10px;
+      padding: 23px;
+      text-align: center;
+      vertical-align: baseline;
+      white-space: nowrap;
+    }
+  </style>
 </head>
 
-<body class="template-page sidebar-collapse body">
+<body class=" sidebar-collapse">
 
-                            <nav class="navbar navbar-expand-lg bg-info">
-                                <div class="container">
-                                    <div class="navbar-translate">
-                                        <a class="navbar-brand" href="index.html">
-                                              <i class="now-ui-icons education_glasses"></i>
-                                               GEEKTEQ changed
-                                          </a>
-                                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#example-navbar-info" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                            <span class="navbar-toggler-bar bar1"></span>
-                                            <span class="navbar-toggler-bar bar2"></span>
-                                            <span class="navbar-toggler-bar bar3"></span>
-											<span class="navbar-toggler-bar bar4"></span>
-                                        </button> 										
-                                    </div>
-                                    <div class="collapse navbar-collapse justify-content-center" id="example-navbar-primary">
-                                        <ul class="navbar-nav">
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#pablo">
-                                                    <i class="now-ui-icons objects_globe"></i>
-                                                    <p>Learn</p>
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#pablo">
-                                                    <i class="now-ui-icons education_paper"></i>
-                                                    <p>TutorConnect</p>
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#pablo">
-                                                    <i class="now-ui-icons ui-1_settings-gear-63"></i>
-                                                    <p>Code</p>
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#pablo">
-                                                    <i class="now-ui-icons education_atom"></i>
-                                                    <p>Quiz</p>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
-                                        <ul class="navbar-nav">
-                                            <li class="nav-item">
-                                                <a class="dropdown" href="login.html">Login/Signup</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </nav>
 
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
+    <div class="container">
+      <div class="navbar-translate">
+        <a class="navbar-brand" href="http://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" data-placement="bottom" target="_blank">
+                      GEEKTEQ
+                  </a>
+        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-bar bar1"></span>
+                      <span class="navbar-toggler-bar bar2"></span>
+                      <span class="navbar-toggler-bar bar3"></span>
+                  </button>
+      </div>
+      <div class="collapse navbar-collapse " id="navigation" data-nav-image="./assets/img/blurred-image-1.jpg">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#pablo">
+                                  <i class="now-ui-icons objects_globe"></i>
+                                  <p>Learn</p>
+                              </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#pablo">
+                                  <i class="now-ui-icons education_paper"></i>
+                                  <p>TutorConnect</p>
+                              </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#pablo">
+                                  <i class="now-ui-icons ui-1_settings-gear-63"></i>
+                                  <p>Code</p>
+                              </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#pablo">
+                                  <i class="now-ui-icons education_atom"></i>
+                                  <p>Quiz</p>
+                              </a>
+          </li>
+
+
+        </ul>
+
+        <ul class="navbar-nav ">
+          <li class="nav-item">
+            <a class="nav-link" href="#pablo">
+                                  <i class="now-ui-icons "></i>
+                                  <p>login</p>
+                              </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link btn btn-neutral" href="https://www.creative-tim.com/product/now-ui-kit-pro" target="_blank">
+                            <i class="now-ui-icons arrows-1_share-66"></i>
+                            <p>Signup</p>
+                        </a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+  <!-- End Navbar -->
+  <div class="wrapper">
+    <div class="page-header clear-filter" filter-color="orange">
+      <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/geek.jpg');">
+      </div>
+      <div class="container">
+        <div class="content-center">
+          <h1 class="title text-center">GEEKTEQ</h1>
+          <h3 class="category">v1.0.0</h3>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <nav>
+          <ul>
+            <li>
+              <a href="">
+                                About Us
+                            </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </div>
 </body>
-
 <!--   Core JS Files   -->
 <script src="../assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
 <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
@@ -87,5 +205,27 @@
 <script src="../assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="../assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
+<script>
+  var header_height;
+  var fixed_section;
+  var floating = false;
+
+  $(document).ready(function() {
+    suggestions_distance = $("#suggestions").offset();
+    pay_height = $('.fixed-section').outerHeight();
+
+    $(window).on('scroll', nowuiKit.checkScrollForTransparentNavbar);
+
+    if ($(window).width() >= 768) {
+      big_image = $('.header[data-parallax="true"]');
+      if (big_image.length != 0) {
+        $(window).on('scroll', nowuiKitDemo.checkScrollForParallax);
+      }
+    }
+
+    // the body of this function is in assets/js/now-ui-kit.js
+    nowuiKit.initSliders();
+  });
+</script>
 
 </html>
