Changes in index file

--- a/views/index.html
+++ b/views/index.html
@@ -108,9 +108,11 @@
   <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="http://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" data-placement="bottom" target="_blank">
+        <a class="navbar-brand" href="index.html" rel="tooltip" data-placement="bottom" target="_self">
+            <i class="now-ui-icons education_glasses"></i>
                       GEEKTEQ
                   </a>
+
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-bar bar1"></span>
                       <span class="navbar-toggler-bar bar2"></span>
@@ -143,8 +145,6 @@
                                   <p>Quiz</p>
                               </a>
           </li>
-
-
         </ul>
 
         <ul class="navbar-nav ">
@@ -161,28 +161,19 @@
                         </a>
           </li>
         </ul>
+
       </div>
     </div>
   </nav>
   <!-- End Navbar -->
+
   <div class="wrapper">
     <div class="page-header page-header-small">
       <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/geek.jpg');">
       </div>
       <div class="container">
         <div class="content-center">
-          <h1 class="title">This is our great company.</h1>
-          <div class="text-center">
-            <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                          <i class="fa fa-facebook-square"></i>
-                      </a>
-            <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                          <i class="fa fa-twitter"></i>
-                      </a>
-            <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                          <i class="fa fa-google-plus"></i>
-                      </a>
-          </div>
+          <h1 class="title">Education is the premise of the progress</h1>
         </div>
       </div>
     </div>
@@ -190,8 +181,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-center">
-            <h2 class="title">Who we are?</h2>
-            <h5 class="description">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record low maximum sea ice extent tihs year down to low ice extent in the Pacific and a late drop in ice extent in the Barents Sea.</h5>
+            <h2 class="title">About</h2>
+            <h5 class="description">The GeekTeq is a web-based application to learn skills that you need for technical jobs. It helps you polish your skills and get ready for the job, whether you are a fresh college graduate or a working professional. This innovative system allows college faculty to share assignments and interview mock tests with engineering students.</h5>
           </div>
         </div>
         <div class="separator separator-primary"></div>
@@ -200,19 +191,18 @@
             <div class="col-md-6">
               <div class="image-container image-left" style="background-image: url('../assets/img/login.jpg')">
                 <!-- First image on the left side -->
-                <p class="blockquote blockquote-primary">"Over the span of the satellite record, Arctic sea ice has been declining significantly, while sea ice in the Antarctichas increased very slightly"
+                <p class="blockquote blockquote-primary">"Over the span of the academic record, learning things on interactive platform gives advancement to placement and student intractability"
                   <br>
                   <br>
-                  <small>-NOAA</small>
                 </p>
               </div>
               <!-- Second image on the left side of the article -->
-              <div class="image-container" style="background-image: url('../assets/img/bg3.jpg')"></div>
+              <div class="image-container" style="background-image: url('../assets/img/slide.jpg')"></div>
             </div>
             <div class="col-md-5">
               <!-- First image on the right side, above the article -->
-              <div class="image-container image-right" style="background-image: url('../assets/img/bg1.jpg')"></div>
-              <h3>So what does the new record for the lowest level of winter ice actually mean</h3>
+              <div class="image-container image-right" style="background-image: url('../assets/img/img2.jpg')"></div>
+              <h3>So what this platform is all about</h3>
               <p>The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever happens with climate change. Even if the Arctic continues to be one of the fastest-warming regions of the world,
                 it will always be plunged into bitterly cold polar dark every winter. And year-by-year, for all kinds of natural reasons, there’s huge variety of the state of the ice.
               </p>
@@ -231,8 +221,8 @@
 
     <div class="section section-contact-us text-center">
       <div class="container">
-        <h2 class="title">Want to work with us?</h2>
-        <p class="description">Your project is very important to us.</p>
+        <h2 class="title">Want to work?</h2>
+        <p class="description">Register here to connect and learn.</p>
         <div class="row">
           <div class="col-lg-6 text-center col-md-8 ml-auto mr-auto">
             <div class="input-group input-lg">
@@ -247,11 +237,8 @@
                           </span>
               <input type="text" class="form-control" placeholder="Email...">
             </div>
-            <div class="textarea-container">
-              <textarea class="form-control" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
-            </div>
             <div class="send-button">
-              <a href="#pablo" class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
+              <a href="#pablo" class="btn btn-primary btn-round btn-block btn-lg">Register</a>
             </div>
           </div>
         </div>
@@ -262,34 +249,18 @@
         <nav>
           <ul>
             <li>
-              <a href="https://www.creative-tim.com">
-                              Creative Tim
-                          </a>
-            </li>
-            <li>
               <a href="http://presentation.creative-tim.com">
                               About Us
                           </a>
-            </li>
-            <li>
-              <a href="http://blog.creative-tim.com">
-                              Blog
-                          </a>
-            </li>
-            <li>
-              <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                              MIT License
-                          </a>
-            </li>
+            </li>           
           </ul>
         </nav>
         <div class="copyright">
           &copy;
           <script>
             document.write(new Date().getFullYear())
-          </script>, Designed by
-          <a href="http://www.invisionapp.com" target="_blank">Invision</a>. Coded by
-          <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+          </script>, Designed and Coded by
+          <a href="#ranu" target="_blank">Ranu Singhal </a>
         </div>
       </div>
     </footer>
