--- a/views/register.html
+++ b/views/register.html
@@ -2,125 +2,122 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="../assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Login Page - Now Ui Kit by Creative Tim</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="../assets/css/demo.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Register - GEEKTEQ</title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <!--     Fonts and icons     -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+  <!-- CSS Files -->
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
+  <!-- CSS Just for demo purpose, don't include it in your project -->
+  <link href="../assets/css/demo.css" rel="stylesheet" />
 </head>
 
 <body class="login-page sidebar-collapse">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
-        <div class="container">
-            <div class="dropdown button-dropdown">
-                <a href="#pablo" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
+    <div class="container">
+      <div class="dropdown button-dropdown">
+        <a href="#pablo" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">
                     <span class="button-bar"></span>
                     <span class="button-bar"></span>
                     <span class="button-bar"></span>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Learn</a>
-                    <a class="dropdown-item" href="#">CodingGround</a>
-                    <a class="dropdown-item" href="#">Q/A</a>
-                    <a class="dropdown-item" href="#">TutorConnect</a>
-                </div>
-            </div>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Learn</a>
+          <a class="dropdown-item" href="#">CodingGround</a>
+          <a class="dropdown-item" href="#">Q/A</a>
+          <a class="dropdown-item" href="#">TutorConnect</a>
+        </div>
+      </div>
 
-            <div class="navbar-translate">
-                <a class="navbar-brand" href="index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
+      <div class="navbar-translate">
+        <a class="navbar-brand" href="index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
                   GEEKTEQ
                 </a>
-                <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
                     <span class="navbar-toggler-bar bar2"></span>
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
-            </div>
-            <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                    <!-- <li class="nav-item">
+      </div>
+      <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <!-- <li class="nav-item">
                         <a class="nav-link" href=" ">Have an issue?</a>
                     </li> -->
-                  </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- End Navbar -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End Navbar -->
 
-    <div class="page-header" filter-color="orange">
-        <div class="page-header-image" style="background-image:url(../assets/img/login.jpg)"></div>
-        <div class="container">
-            <div class="col-md-4 content-center">
-                <div class="card card-login card-plain">
-                    <form class="form" method="" action="">
-                        <div class="header header-primary text-center">
-                            <div class="logo-container">
-                                <img src="../assets/img/geeklogo.png" alt="">
-                            </div>
-                        </div>
-                        <div class="content">
-                            <div class="input-group form-group-no-border input-lg">
-                                <span class="input-group-addon">
+  <div class="page-header" filter-color="orange">
+    <div class="page-header-image" style="background-image:url(../assets/img/login.jpg)"></div>
+    <div class="container">
+      <div class="col-md-4 content-center">
+        <div class="card card-login card-plain">
+          <form class="form" method="" action="">
+            <div class="header header-primary text-center">
+              <div class="logo-container">
+                <img src="../assets/img/geeklogo.png" alt="">
+              </div>
+            </div>
+            <div class="content">
+              <div class="input-group form-group-no-border input-lg">
+                <span class="input-group-addon">
                                     <i class="now-ui-icons users_circle-08"></i>
                                 </span>
-                                <input type="text" class="form-control" placeholder="First Name...">
-                            </div>
-                            <div class="input-group form-group-no-border input-lg">
-                                <span class="input-group-addon">
-                                    <i class="now-ui-icons text_caps-small"></i>
+                <input type="text" class="form-control" placeholder="Full Name">
+              </div>
+
+              <div class="input-group form-group-no-border input-lg">
+                <span class="input-group-addon">
+                                    <i class="now-ui-icons education_hat"></i>
                                 </span>
-                                <input type="text" placeholder="Last Name..." class="form-control" />
-                            </div>
-                        <div class="input-group form-group-no-border input-lg">
-                            <span class="input-group-addon">
-                                <i class="now-ui-icons text_caps-small"></i>
-                            </span>
-                            <input type="text" placeholder="CollegeName.." class="form-control" />
-                        </div>
-                    <div class="input-group form-group-no-border input-lg">
-                        <span class="input-group-addon">
-                            <i class="now-ui-icons text_caps-small"></i>
-                        </span>
-                        <input type="text" placeholder="E-Mail..." class="form-control" />
-                    </div>
-                    <div class="input-group form-group-no-border input-lg">
-                        <span class="input-group-addon">
-                            <i class="now-ui-icons text_caps-small"></i>
-                        </span>
-                        <input type="text" placeholder="Department..." class="form-control" />
-                    </div>
-                </div>
-                        <div class="footer text-center">
-                            <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
-                        </div>
-                        <div class="pull-left">
-                            <h6>
+                <input type="text" placeholder="College Name" class="form-control" />
+              </div>
+
+              <div class="input-group form-group-no-border input-lg">
+                <span class="input-group-addon">
+                                          <i class="now-ui-icons ui-1_email-85"></i>
+                                      </span>
+                <input type="email" placeholder="email" class="form-control" name="Email" required/>
+              </div>
+              <div class="input-group form-group-no-border input-lg">
+                <span class="input-group-addon">
+                                          <i class="now-ui-icons ui-1_lock-circle-open"></i>
+                                      </span>
+                <input type="password" name="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;" class="form-control" />
+              </div>
+
+            </div>
+            <div class="footer text-center">
+              <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Sign Up</a>
+            </div>
+            <div class="pull-left">
+              <h6>
                                 <a href="#pablo" class="link">Create Account</a>
                             </h6>
-                        </div>
-                        <div class="pull-right">
-                            <h6>
+            </div>
+            <div class="pull-right">
+              <h6>
                                 <a href="#pablo" class="link">Need Help?</a>
                             </h6>
-                        </div>
-                    </form>
-                </div>
             </div>
+          </form>
         </div>
+      </div>
     </div>
+  </div>
 </body>
 
 <!--   Core JS Files   -->
