--- a/views/register.html
+++ b/views/register.html
@@ -14,8 +14,7 @@
   <!-- CSS Files -->
   <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="../assets/css/demo.css" rel="stylesheet" />
+
 </head>
 
 <body class="login-page sidebar-collapse">
@@ -37,7 +36,7 @@
       </div>
 
       <div class="navbar-translate">
-        <a class="navbar-brand" href="index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
+        <a class="navbar-brand" href="index.html" rel="tooltip" title="" data-placement="bottom" target="_blank">
                   GEEKTEQ
                 </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
