--- a/views/index.html
+++ b/views/index.html
@@ -100,11 +100,11 @@
   </style>
 </head>
 
-<body class=" sidebar-collapse">
+<body class="sidebar-collapse">
 
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
+  <nav class="navbar navbar-expand-lg bg-dark fixed-top navbar-transparent " color-on-scroll="400">
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="index.html" rel="tooltip" data-placement="bottom" target="_self">
@@ -148,13 +148,13 @@
 
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link" href="#pablo">
+            <a class="nav-link" href="login.html">
                                   <i class="now-ui-icons users_circle-08"></i>
                                   <p>Login</p>
                               </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link btn btn-neutral" href="register.html " target="_blank ">
+            <a class="nav-link btn btn-nav-cta" href="register.html " target="_blank ">
                             <i class="now-ui-icons arrows-1_share-66 "></i>
                             <p>Signup</p>
                         </a>
@@ -248,7 +248,7 @@
         <nav>
           <ul>
             <li>
-              <a href="http://presentation.creative-tim.com ">
+              <a href="">
                               About Us
                           </a>
             </li>
@@ -269,35 +269,9 @@
 <script src="../assets/js/core/jquery.3.2.1.min.js " type="text/javascript "></script>
 <script src="../assets/js/core/popper.min.js " type="text/javascript "></script>
 <script src="../assets/js/core/bootstrap.min.js " type="text/javascript "></script>
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="../assets/js/plugins/bootstrap-switch.js "></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="../assets/js/plugins/nouislider.min.js " type="text/javascript "></script>
-<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-<script src="../assets/js/plugins/bootstrap-datepicker.js " type="text/javascript "></script>
+
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="../assets/js/now-ui-kit.js?v=1.1.0 " type="text/javascript "></script>
-<script>
-  var header_height;
-  var fixed_section;
-  var floating = false;
 
-  $(document).ready(function() {
-    suggestions_distance = $("#suggestions ").offset();
-    pay_height = $('.fixed-section').outerHeight();
-
-    $(window).on('scroll', nowuiKit.checkScrollForTransparentNavbar);
-
-    if ($(window).width() >= 768) {
-      big_image = $('.header[data-parallax="true "]');
-      if (big_image.length != 0) {
-        $(window).on('scroll', nowuiKitDemo.checkScrollForParallax);
-      }
-    }
-
-    // the body of this function is in assets/js/now-ui-kit.js
-    nowuiKit.initSliders();
-  });
-</script>
 
 </html>
