All Navigation styles

--- a/views/navigation.html
+++ b/views/navigation.html
@@ -22,10 +22,10 @@
     <h4>logged out</h4>
 
     <div id="navbar">
-      <div class="navigation-example" style="background-image:url('assets/img/bg7.jpg')">
+      <div class="navigation-example">
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg bg-primary  " color-on-scroll="400">
+        <nav class="navbar navbar-expand-lg bg-dark " color-on-scroll="400">
           <div class="container">
             <div class="navbar-translate">
               <a class="navbar-brand" href="index.html" rel="tooltip" data-placement="bottom" target="_self">
@@ -74,7 +74,7 @@
                                     </a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link btn btn-neutral" href="https://www.creative-tim.com/product/now-ui-kit-pro" target="_blank">
+                  <a class="nav-link btn btn-success" href="https://www.creative-tim.com/product/now-ui-kit-pro" target="_blank">
                                   <i class="now-ui-icons arrows-1_share-66"></i>
                                   <p>Signup</p>
                               </a>
@@ -88,7 +88,7 @@
 
         <h4>logged in</h4>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg bg-primary  " color-on-scroll="400">
+        <nav class="navbar navbar-expand-lg bg-dark  " color-on-scroll="400">
           <div class="container">
             <div class="navbar-translate">
               <a class="navbar-brand" href="index.html" rel="tooltip" data-placement="bottom" target="_self">
@@ -142,12 +142,10 @@
                           <i class="now-ui-icons ui-1_settings-gear-63" aria-hidden="true"></i>
                       </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-header">Dropdown header</a>
-                    <a class="dropdown-item" href="#">Action</a>
                     <div class="divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
+                    <a class="dropdown-item" href="#">Profile</a>
                     <div class="divider"></div>
-                    <a class="dropdown-item" href="#">One more separated link</a>
+                    <a class="dropdown-item" href="#">Log Out</a>
                   </div>
                 </li>
               </ul>
@@ -163,36 +161,27 @@
     </div>
 
     <h4>Footer</h4>
-    <footer class="footer footer-default">
-      <div class="container">
+    <footer class="footer footer-default ">
+      <div class="container ">
         <nav>
           <ul>
             <li>
-              <a href="#">
-                                  link 1
-                              </a>
+              <a href="">
+                              About Us
+                          </a>
             </li>
-            <li>
-              <a href="#">
-                                  link 2
-                              </a>
-            </li>
-            <li>
-              <a href="#">
-                                  link 3
-                              </a>
-            </li>
-            <li>
-              <a href="#">
-                                  link 4
-                              </a>
-            </li>
-
           </ul>
         </nav>
-
+        <div class="copyright ">
+          &copy;
+          <script>
+            document.write(new Date().getFullYear())
+          </script>, Developed by
+          <a href="#ranu " target="_blank ">Ranu Singhal </a>
+        </div>
       </div>
     </footer>
+
   </div>
 </body>
 <!--   Core JS Files   -->
